// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CustomEmailPageItem marks parent as current page when pathname matches 1`] = `
<div>
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-10du2vf-MuiListItem-root"
  >
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1n4h1pr-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <a
        aria-current="page"
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-15u6cbu-MuiTypography-root-MuiLink-root"
        data-id="navmenu-email-email"
        href="/messages/email/123"
        role="link"
      >
        Email
      </a>
    </div>
  </li>
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-pkdbax-MuiListItem-root"
  >
    <ul
      aria-label="Email sections"
      class="MuiList-root MuiList-padding css-14r9dwy-MuiList-root"
    >
      <div
        class="MuiBox-root css-0"
      >
        <div
          data-testid="sidebar-item-details"
        >
          Details
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <div
          data-testid="sidebar-item-attachments"
        />
      </div>
    </ul>
  </li>
</div>
`;

exports[`CustomEmailPageItem should link to chat history page when item is Chat History, not to email 1`] = `
<div>
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-10du2vf-MuiListItem-root"
  >
    <div
      class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1n4h1pr-MuiButtonBase-root-MuiListItemButton-root"
      role="button"
      tabindex="0"
    >
      <a
        aria-current="page"
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-15u6cbu-MuiTypography-root-MuiLink-root"
        data-id="navmenu-email-chat-history"
        href="/messages/chat"
        role="link"
      >
        Chat History
      </a>
    </div>
  </li>
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-pkdbax-MuiListItem-root"
  >
    <ul
      aria-label="Chat History sections"
      class="MuiList-root MuiList-padding css-14r9dwy-MuiList-root"
    />
  </li>
</div>
`;
